# open-ai-video-understanding

./: .gitignore  Cargo.toml  MIGRATION_STEPS.md  README.md
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs  routes.rs  services.rs
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/RAG/: route.ts
frontend/app/api/analyze/: route.ts
frontend/app/explore/: page.tsx
frontend/app/migrate/: page.tsx
frontend/app/overview/: page.tsx
frontend/app/overview/[index]/: page.tsx
frontend/components/ui/: file-upload.tsx  response-stream.tsx  select.tsx  sidebar.tsx
src/: handlers.rs  routes.rs  services.rs
