[package]
name = "open-ai-video-understanding"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tracing-subscriber = "0.3"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
gemini-rust = "1.5.1"
dotenv = "0.15"
tracing = "0.1"
video-rs = { version = "0.10", features = ["ndarray"] }
image = "0.25"
anyhow = "1.0"
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
ffmpeg-next = "7.1"
